--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -32,9 +32,50 @@
 
 .button {
   margin-top: 10px;
+  margin-right: 10px;
   padding: 0 10px;
   height: 40px;
   font-family: var(--font-mono);
   font-size: 20px;
   cursor: pointer;
+}
+
+.audio {
+  width: 100%;
+}
+
+.lds_ring {
+  display: inline-block;
+  position: relative;
+  width: 35px;
+  height: 35px;
+}
+.lds_ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds_ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds_ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds_ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds_ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds_ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
